Attempt to fix user profile bug on mobile

--- a/Site/users/user_style.css
+++ b/Site/users/user_style.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 335px;
+    height: 400%;
     color: white;
     background-color: rgba(21, 21, 21, 0.7);
     text-align: center;
